# PDFMathTranslate

./: Dockerfile  pyproject.toml
pdf2zh/: gui.py
