[project]
name = "pdf2zh"
version = "1.0.0"
description = "Latex PDF Translator"
authors = [
    { name = "Byaidu", email = "byaidux@gmail.com" },
    { name = "Xin", email = "xiongxinstu@icloud.com" }
]

license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# # Download all required fonts
#ADD "https://github.com/satbyy/go-noto-universal/releases/download/v7.0/GoNotoKurrent-Regular.ttf" /app/
#ADD "https://github.com/timelic/source-han-serif/releases/download/main/SourceHanSerifCN-Regular.ttf" /app/
#ADD "https://github.com/timelic/source-han-serif/releases/download/main/SourceHanSerifTW-Regular.ttf" /app/
#ADD "https://github.com/timelic/source-han-serif/releases/download/main/SourceHanSerifJP-Regular.ttf" /app/
#ADD "https://github.com/timelic/source-han-serif/releases/download/main/SourceHanSerifKR-Regular.ttf" /app/

dependencies = [
  "aiofiles",
  "annotated-types",
  "anyio",
  "azure-ai-translation-text==1.0.1",
  "bitarray",
  "bitstring",
  "certifi",
  "cffi",
  "charset-normalizer",
  "click",
  "click-default-group",
  "coloredlogs",
  "ConfigArgParse",
  "cryptography",
  "deepl",
  "Deprecated",
  "distro",
  "fastapi",
  "ffmpy",
  "filelock",
  "flatbuffers",
  "fonttools",
  "freetype-py",
  "fsspec",
  "gradio",
  "gradio_client",
  "gradio_pdf",
  "groovy",
  "h11",
  "hf-xet",
  "httpcore",
  "httpx",
  "huggingface-hub",
  "humanfriendly",
  "idna",
  "imageio",
  "isodate",
  "Jinja2",
  "lazy_loader",
  "Levenshtein",
  "lxml",
  "markdown-it-py",
  "MarkupSafe",
  "mdurl",
  "mpmath",
  "msgpack",
  "networkx",
  "numpy",
  "ollama",
  "onnx",
  "onnxruntime",
  "openai",
  "opencv-python-headless",
  "orjson",
  "packaging",
  "pandas",
  "pdfminer.six==20250416",
  "peewee",
  "pikepdf",
  "pillow",
  "protobuf",
  "psutil",
  "pyclipper",
  "pycparser",
  "pydantic",
  "pydantic_core",
  "pydub",
  "Pygments",
  "PyMuPDF",
  "python-dateutil",
  "python-Levenshtein",
  "python-multipart",
  "pytz",
  "PyYAML",
  "RapidFuzz",
  "rapidocr-onnxruntime",
  "regex",
  "requests",
  "rich",
  "scikit-image",
  "scipy",
  "semantic-version",
  "shapely",
  "shellingham",
  "six",
  "sniffio",
  "socksio",
  "starlette",
  "sympy",
  "tenacity",
  "tencentcloud-sdk-python-common",
  "tencentcloud-sdk-python-tmt",
  "tifffile",
  "tiktoken",
  "toposort",
  "tqdm",
  "typer",
  "typing-inspection",
  "typing_extensions",
  "tzdata",
  "untokenize",
  "urllib3",
  "uvicorn",
  "websockets",
  "wrapt",
  "xinference-client",
  "xsdata",
  "zstd"
]

[project.optional-dependencies]
backend = [
    "flask",
    "celery",
    "redis"
]
argostranslate = [
    "argostranslate"
]
mcp = [
    "mcp>=1.6.0",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "pytest",
    "build",
    "bumpver>=2024.1130",
]

[project.urls]
Homepage = "https://github.com/Byaidu/PDFMathTranslate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pdf2zh = "pdf2zh.pdf2zh:main"

[tool.flake8]
ignore = ["E203", "E261", "E501", "W503", "E741"]
max-line-length = 88



[bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[.PYTAGNUM]"

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pdf2zh/__init__.py" = [
    '__version__ = "{version}"'
]
